...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/smoke"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/showLinesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_pill"
            android:paddingStart="10dp"
            android:paddingTop="3dp"
            android:paddingEnd="10dp"
...
