<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="22dp"
    android:paddingTop="10dp"
    android:paddingEnd="22dp">

    <TextView
        android:id="@+id/deleteMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/paper"
        android:textSize="15sp" />

    <CheckBox
        android:id="@+id/deletePhotos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textColor="@color/smoke"
        android:textSize="13sp" />

</LinearLayout>